Add partial views

--- a/index.html
+++ b/index.html
@@ -17,27 +17,33 @@
             <div>
                 <ul class="nav navbar-nav navbar-right" id="nav-link">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="partials/about.html" class="jsload">About</a></li>
+                    <li><a href="partials/contact.html" class="jsload">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 picBox">
-                <img src="images/pexels-photo-medium.jpg" alt="Satellite taken from inside space station" title="Satellite" class="homeImages">
+    <section id="content">
+        <section id="page">
+            <div class="container-fluid">
+                <div class="row" id="homePageImages">
+                    <div class="col-xs-12 col-sm-6 picBox">
+                        <img src="images/pexels-photo-medium.jpg" alt="Satellite taken from inside space station" title="Satellite" class="homeImages">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 picBox">
+                        <img src="images/pexels-photo-medium-3.jpg" alt="Playstation 4 controller" title="PS4" class="homeImages">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 picBox">
+                        <img src="images/notes-clean-hero-minimal-medium.jpg" alt="Picture of a whiteboard" title="Whiteboard" class="homeImages">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 picBox">
+                        <img src="images/pexels-photo-medium-2.jpg" alt="Old Cannon camera" title="Camera" class="homeImages">
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6 picBox">
-                <img src="images/pexels-photo-medium-3.jpg" alt="Playstation 4 controller" title="PS4" class="homeImages">
-            </div>
-            <div class="col-xs-12 col-sm-6 picBox">
-                <img src="images/notes-clean-hero-minimal-medium.jpg" alt="Picture of a whiteboard" title="Whiteboard" class="homeImages">
-            </div>
-            <div class="col-xs-12 col-sm-6 picBox">
-                <img src="images/pexels-photo-medium-2.jpg" alt="Old Cannon camera" title="Camera" class="homeImages">
-            </div>
-        </div>
-    </div>
+        </section>
+    </section>
 </body>
+<script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script src="app.js"></script>
 </html>
