Added interactive function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="partials/about.html" class="jsload">About</a></li>
                     <li><a href="partials/contact.html" class="jsload">Contact</a></li>
+                    <li><button id="capButton" type="submit" onclick="app.capitalize()">Enlarge Text</button></li>
                 </ul>
             </div>
         </div>
