Refactor app.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="partials/about.html" class="jsload">About</a></li>
                     <li><a href="partials/contact.html" class="jsload">Contact</a></li>
-                    <li><button id="capButton" type="submit" onclick="app.capitalize()">Enlarge Text</button></li>
+                    <li><button id="capButton" type="submit" onclick="capitalize()">Enlarge Text</button></li>
                 </ul>
             </div>
         </div>
@@ -35,10 +35,10 @@
                         <img src="images/pexels-photo-medium-3.jpg" alt="Playstation 4 controller" title="PS4" class="homeImages">
                     </div>
                     <div class="col-xs-12 col-sm-6 picBox">
-                        <img src="images/notes-clean-hero-minimal-medium.jpg" alt="Picture of a whiteboard" title="Whiteboard" class="homeImages">
-                    </div>
-                    <div class="col-xs-12 col-sm-6 picBox">
                         <img src="images/pexels-photo-medium-2.jpg" alt="Old Cannon camera" title="Camera" class="homeImages">
+                    </div>
+                     <div class="col-xs-12 col-sm-6 picBox">
+                        <img src="images/notes-clean-hero-minimal-medium.jpg" alt="Picture of a whiteboard" title="Whiteboard" class="homeImages">
                     </div>
                 </div>
             </div>
